--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "vercel-build": "echo vercel",
-    "dev": "npx nodemon src/index.js"
+    "vercel-build": "echo vercel"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
