--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/src/index.js" }]
+  "version": 2,
+  "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
 }
